--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <article class="picturecard">
             <img id ="doggo" src="">
-       
         </article>
+        <button type="button" id="newDoggo"><img id="bone" src="BoneButtonTrim.png"></button>
     
         <script src="scripts.js"></script>
     </main>
